--- a/app/assets/stylesheets/globals.scss
+++ b/app/assets/stylesheets/globals.scss
@@ -9,6 +9,10 @@ a.nav-link:hover {
   color: hsla(0,0%,100%,.7) !important;
 }
 
+.alert {
+  margin: 2rem;
+}
+
 .octicon {
   fill: currentColor;
 }
